# aoss-curl

./: Cargo.toml  README.md
.github/: dependabot.yml
src/: aoss.rs  client.rs  config.rs  error.rs  lib.rs  sigv4.rs
