[package]
name = "aoss-curl"
version = "1.0.15"
edition = "2021"
authors = ["Jean Mainguy"]
categories = ["command-line-utilities"]
keywords = ["aws", "opensearch", "sigv4"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jhandguy/aoss-curl"
documentation = "https://docs.rs/aoss-curl"
description = "Request to Amazon OpenSearch Service with SigV4 🔏"

[lib]
name = "aoss_curl"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "aoss-curl"
test = false
doc = false

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.81"
aws-config = "1.5.1"
aws-credential-types = "1.2.0"
aws-mfa = "1.0.15"
aws-runtime = "1.3.1"
aws-sigv4 = { version = "1.2.2", features = ["sigv4a"] }
aws-smithy-runtime-api = "1.7.0"
clap = { version = "4.5.9", features = ["derive", "env"] }
http-body-util = "0.1.2"
hyper = { version = "1.4.1", features = ["full"] }
hyper-rustls = { version = "0.27.2", features = ["webpki-tokio"]}
hyper-util = { version = "0.1.6", features = ["full"] }
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }

[dev-dependencies]
time = { version = "0.3.36", features = ["formatting"] }
