[package]
name = "aoss-curl"
version = "1.0.19"
edition = "2021"
authors = ["Jean Mainguy"]
categories = ["command-line-utilities"]
keywords = ["aws", "opensearch", "sigv4"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jhandguy/aoss-curl"
documentation = "https://docs.rs/aoss-curl"
description = "Request to Amazon OpenSearch Service with SigV4 🔏"

[lib]
name = "aoss_curl"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "aoss-curl"
test = false
doc = false

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"

[dependencies]
anyhow = "=1.0.91"
async-trait = "=0.1.83"
aws-config = "=1.5.8"
aws-credential-types = "=1.2.1"
aws-mfa = "=1.0.19"
aws-runtime = "=1.4.3"
aws-sigv4 = { version = "=1.2.4", features = ["sigv4a"] }
aws-smithy-runtime-api = "=1.7.2"
clap = { version = "=4.5.20", features = ["derive", "env"] }
http-body-util = "=0.1.2"
hyper = { version = "=1.5.0", features = ["full"] }
hyper-rustls = { version = "=0.27.3", features = ["webpki-tokio"]}
hyper-util = { version = "=0.1.9", features = ["full"] }
thiserror = "=1.0.65"
tokio = { version = "=1.41.0", features = ["full"] }

[dev-dependencies]
time = { version = "=0.3.36", features = ["formatting"] }
