[package]
name = "aoss-curl"
version = "1.0.24"
edition = "2021"
authors = ["Jean Mainguy"]
categories = ["command-line-utilities"]
keywords = ["aws", "opensearch", "sigv4"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jhandguy/aoss-curl"
documentation = "https://docs.rs/aoss-curl"
description = "Request to Amazon OpenSearch Service with SigV4 🔏"

[lib]
name = "aoss_curl"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "aoss-curl"
test = false
doc = false

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"

[dependencies]
anyhow = "1"
async-trait = "0"
aws-config = "1"
aws-credential-types = "1"
aws-mfa = "1"
aws-runtime = "1"
aws-sigv4 = { version = "1", features = ["sigv4a"] }
aws-smithy-runtime-api = "1"
clap = { version = "4", features = ["derive", "env"] }
http-body-util = "0"
hyper = { version = "1", features = ["full"] }
hyper-rustls = { version = "0", features = ["webpki-tokio"]}
hyper-util = { version = "0", features = ["full"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
time = { version = "0", features = ["formatting"] }
